{
    "name": "PlayerInputs",
    "maps": [
        {
            "name": "NormalInputs",
            "id": "55b1d386-ead8-4d59-b3b6-320d9db689de",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "c1a302f3-670e-4b70-8fe3-42f056ed090b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "31ad1e37-f4f5-4479-9e8c-fc8a429f2821",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "52281ed5-70c9-4610-801d-a6958c8f28ff",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d1ce3d64-5943-4623-b6bb-3335016c4fde",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}